--- a/Software/requirements.txt
+++ b/Software/requirements.txt
@@ -1,1 +1,9 @@
-
+# Python Dependencies for Environmental Data Analysis
+numpy==1.24.3
+pandas==2.0.3
+matplotlib==3.7.2
+seaborn==0.12.2
+scipy==1.11.1
+plotly==5.17.0
+scikit-learn==1.3.0
+datetime==4.3
